--- a/index.html
+++ b/index.html
@@ -2199,6 +2199,7 @@
                 state.sessionData[key].push(value);
             }
             autoSave();
+            render();
         }
 
         function toggleBodyPart(part) {
