--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="CALMR">
-    <meta name="theme-color" content="#ff9a9e">
+    <meta name="theme-color" content="#667eea">
     <link rel="manifest" href="#" id="manifest-placeholder">
     <title>CALMR Check-In App</title>
     <style>
@@ -18,76 +18,41 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 50%, #ffecd2 100%);
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
             padding: 20px;
-            color: #444;
-            position: relative;
-            overflow-x: hidden;
-        }
-
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-image:
-                radial-gradient(circle at 20% 50%, rgba(255, 182, 193, 0.3) 0%, transparent 50%),
-                radial-gradient(circle at 80% 80%, rgba(255, 218, 185, 0.3) 0%, transparent 50%);
-            pointer-events: none;
-            z-index: 0;
+            color: #333;
         }
 
         .container {
             max-width: 600px;
             margin: 0 auto;
-            position: relative;
-            z-index: 1;
         }
 
         .card {
-            background: linear-gradient(145deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 250, 245, 0.95) 100%);
-            backdrop-filter: blur(10px);
-            border-radius: 24px;
-            padding: 28px;
+            background: white;
+            border-radius: 16px;
+            padding: 24px;
             margin-bottom: 20px;
-            box-shadow: 0 10px 40px rgba(255, 105, 135, 0.15), 0 4px 12px rgba(0, 0, 0, 0.08);
-            border: 1px solid rgba(255, 255, 255, 0.8);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 15px 50px rgba(255, 105, 135, 0.2), 0 6px 16px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
         }
 
         h1 {
-            background: linear-gradient(135deg, #ff6b9d 0%, #ff8e53 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: #667eea;
             margin-bottom: 8px;
             font-size: 28px;
-            font-weight: 700;
         }
 
         h2 {
-            background: linear-gradient(135deg, #ff6b9d 0%, #ff8e53 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: #667eea;
             margin-bottom: 16px;
             font-size: 22px;
-            font-weight: 600;
         }
 
         h3 {
-            color: #8b5e5e;
+            color: #555;
             margin-bottom: 12px;
             font-size: 18px;
-            font-weight: 600;
         }
 
         .subtitle {
@@ -103,47 +68,29 @@
         }
 
         button {
-            background: linear-gradient(135deg, #ff758c 0%, #ff7eb3 100%);
+            background: #667eea;
             color: white;
             border: none;
             padding: 16px 24px;
-            border-radius: 16px;
+            border-radius: 12px;
             font-size: 16px;
             font-weight: 600;
             cursor: pointer;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: all 0.2s;
             text-align: left;
             display: flex;
             align-items: center;
             gap: 12px;
-            box-shadow: 0 4px 15px rgba(255, 117, 140, 0.3);
-            position: relative;
-            overflow: hidden;
-        }
-
-        button::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
-            transition: left 0.5s;
-        }
-
-        button:hover::before {
-            left: 100%;
         }
 
         button:hover {
-            background: linear-gradient(135deg, #ff6b9d 0%, #ff8ac6 100%);
-            transform: translateY(-3px);
-            box-shadow: 0 6px 20px rgba(255, 107, 157, 0.4);
+            background: #5568d3;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
         }
 
         button:active {
-            transform: translateY(-1px);
+            transform: translateY(0);
         }
 
         .button-icon {
@@ -153,24 +100,20 @@
         }
 
         .secondary-button {
-            background: linear-gradient(135deg, #ffeaa7 0%, #fdcb6e 100%);
-            color: #d63031;
-            box-shadow: 0 4px 15px rgba(253, 203, 110, 0.3);
+            background: #e0e7ff;
+            color: #667eea;
         }
 
         .secondary-button:hover {
-            background: linear-gradient(135deg, #ffd89b 0%, #fdbb54 100%);
-            box-shadow: 0 6px 20px rgba(253, 187, 84, 0.4);
+            background: #c7d2fe;
         }
 
         .danger-button {
-            background: linear-gradient(135deg, #ee5a6f 0%, #f093fb 100%);
-            box-shadow: 0 4px 15px rgba(238, 90, 111, 0.3);
+            background: #ef4444;
         }
 
         .danger-button:hover {
-            background: linear-gradient(135deg, #e84a5f 0%, #ee84e9 100%);
-            box-shadow: 0 6px 20px rgba(232, 74, 95, 0.4);
+            background: #dc2626;
         }
 
         .question-section {
@@ -194,17 +137,14 @@
             display: flex;
             align-items: center;
             padding: 12px;
-            background: linear-gradient(135deg, #fff5f5 0%, #ffe4e6 100%);
-            border-radius: 12px;
+            background: #f8fafc;
+            border-radius: 8px;
             cursor: pointer;
-            transition: all 0.3s ease;
-            border: 2px solid transparent;
+            transition: all 0.2s;
         }
 
         .checkbox-item:hover {
-            background: linear-gradient(135deg, #ffe4e6 0%, #ffd6d9 100%);
-            border-color: rgba(255, 107, 157, 0.3);
-            transform: translateX(4px);
+            background: #e0e7ff;
         }
 
         .checkbox-item input[type="checkbox"] {
@@ -224,46 +164,39 @@
             flex: 1;
             min-width: 80px;
             padding: 12px;
-            background: linear-gradient(135deg, #fff5f5 0%, #ffe4e6 100%);
-            border: 2px solid rgba(255, 117, 140, 0.2);
-            border-radius: 12px;
+            background: #f8fafc;
+            border: 2px solid #e2e8f0;
+            border-radius: 8px;
             text-align: center;
             cursor: pointer;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            font-weight: 500;
+            transition: all 0.2s;
         }
 
         .radio-button:hover {
-            border-color: rgba(255, 107, 157, 0.5);
-            background: linear-gradient(135deg, #ffe4e6 0%, #ffd6d9 100%);
-            transform: scale(1.05);
+            border-color: #667eea;
+            background: #e0e7ff;
         }
 
         .radio-button.selected {
-            background: linear-gradient(135deg, #ff758c 0%, #ff7eb3 100%);
+            background: #667eea;
             color: white;
-            border-color: #ff6b9d;
-            box-shadow: 0 4px 15px rgba(255, 117, 140, 0.3);
+            border-color: #667eea;
         }
 
         textarea {
             width: 100%;
-            padding: 14px;
-            border: 2px solid rgba(255, 117, 140, 0.2);
-            border-radius: 12px;
+            padding: 12px;
+            border: 2px solid #e2e8f0;
+            border-radius: 8px;
             font-family: inherit;
             font-size: 14px;
             resize: vertical;
             min-height: 80px;
-            background: linear-gradient(135deg, #fff5f5 0%, #ffe4e6 100%);
-            transition: all 0.3s ease;
         }
 
         textarea:focus {
             outline: none;
-            border-color: #ff758c;
-            background: white;
-            box-shadow: 0 4px 15px rgba(255, 117, 140, 0.2);
+            border-color: #667eea;
         }
 
         .expandable-text {
@@ -271,19 +204,17 @@
         }
 
         .expand-toggle {
-            color: #ff6b9d;
+            color: #667eea;
             cursor: pointer;
             font-size: 14px;
             padding: 8px 0;
             display: inline-flex;
             align-items: center;
             gap: 4px;
-            transition: all 0.2s ease;
         }
 
         .expand-toggle:hover {
-            color: #ff8ac6;
-            transform: translateX(3px);
+            text-decoration: underline;
         }
 
         .hidden {
@@ -291,19 +222,17 @@
         }
 
         .progress-bar {
-            height: 6px;
-            background: rgba(255, 182, 193, 0.3);
-            border-radius: 10px;
+            height: 4px;
+            background: #e2e8f0;
+            border-radius: 2px;
             margin-bottom: 24px;
             overflow: hidden;
-            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .progress-fill {
             height: 100%;
-            background: linear-gradient(90deg, #ff758c 0%, #ff7eb3 100%);
-            transition: width 0.5s cubic-bezier(0.4, 0, 0.2, 1);
-            box-shadow: 0 0 10px rgba(255, 117, 140, 0.5);
+            background: #667eea;
+            transition: width 0.3s;
         }
 
         .navigation-buttons {
@@ -317,35 +246,31 @@
         }
 
         .back-button {
-            background: linear-gradient(135deg, #d4a5a5 0%, #c99494 100%);
-            box-shadow: 0 4px 15px rgba(212, 165, 165, 0.3);
+            background: #94a3b8;
         }
 
         .back-button:hover {
-            background: linear-gradient(135deg, #c99494 0%, #b88484 100%);
-            box-shadow: 0 6px 20px rgba(201, 148, 148, 0.4);
+            background: #64748b;
         }
 
         .mantra-box {
-            background: linear-gradient(135deg, #fff3e0 0%, #ffe4cc 100%);
-            border-left: 4px solid #ff9f43;
-            padding: 18px;
-            border-radius: 12px;
+            background: #fef3c7;
+            border-left: 4px solid #f59e0b;
+            padding: 16px;
+            border-radius: 8px;
             margin: 16px 0;
             font-style: italic;
-            color: #8b5a00;
-            box-shadow: 0 4px 12px rgba(255, 159, 67, 0.2);
+            color: #92400e;
         }
 
         .info-box {
-            background: linear-gradient(135deg, #ffeef8 0%, #ffe0f0 100%);
-            border-left: 4px solid #ff6b9d;
-            padding: 18px;
-            border-radius: 12px;
+            background: #dbeafe;
+            border-left: 4px solid #3b82f6;
+            padding: 16px;
+            border-radius: 8px;
             margin: 16px 0;
-            color: #8b4566;
+            color: #1e40af;
             font-size: 14px;
-            box-shadow: 0 4px 12px rgba(255, 107, 157, 0.15);
         }
 
         .body-map {
@@ -356,34 +281,30 @@
         }
 
         .body-part {
-            padding: 14px;
-            background: linear-gradient(135deg, #fff5f5 0%, #ffe4e6 100%);
-            border: 2px solid rgba(255, 117, 140, 0.2);
-            border-radius: 12px;
+            padding: 12px;
+            background: #f8fafc;
+            border: 2px solid #e2e8f0;
+            border-radius: 8px;
             text-align: center;
             cursor: pointer;
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            font-weight: 500;
+            transition: all 0.2s;
         }
 
         .body-part:hover {
-            border-color: rgba(255, 107, 157, 0.5);
-            background: linear-gradient(135deg, #ffe4e6 0%, #ffd6d9 100%);
-            transform: scale(1.05);
+            border-color: #667eea;
         }
 
         .body-part.selected {
-            background: linear-gradient(135deg, #ff758c 0%, #ff7eb3 100%);
+            background: #667eea;
             color: white;
-            border-color: #ff6b9d;
-            box-shadow: 0 4px 15px rgba(255, 117, 140, 0.3);
+            border-color: #667eea;
         }
 
         .breathing-circle {
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            background: linear-gradient(135deg, #ff758c 0%, #ff7eb3 100%);
+            background: #667eea;
             margin: 32px auto;
             display: flex;
             align-items: center;
@@ -392,38 +313,11 @@
             font-size: 18px;
             font-weight: 600;
             animation: breathe 6s infinite;
-            box-shadow: 0 8px 30px rgba(255, 117, 140, 0.4);
         }
 
         @keyframes breathe {
-            0%, 100% {
-                transform: scale(1);
-                opacity: 0.85;
-                box-shadow: 0 8px 30px rgba(255, 117, 140, 0.4);
-            }
-            50% {
-                transform: scale(1.2);
-                opacity: 1;
-                box-shadow: 0 12px 40px rgba(255, 117, 140, 0.6);
-            }
-        }
-
-        @keyframes float {
-            0%, 100% {
-                transform: translateY(0px);
-            }
-            50% {
-                transform: translateY(-8px);
-            }
-        }
-
-        @keyframes shimmer {
-            0% {
-                background-position: -200% center;
-            }
-            100% {
-                background-position: 200% center;
-            }
+            0%, 100% { transform: scale(1); opacity: 0.8; }
+            50% { transform: scale(1.2); opacity: 1; }
         }
 
         .stats-grid {
@@ -434,56 +328,41 @@
         }
 
         .stat-card {
-            background: linear-gradient(135deg, #fff5f5 0%, #ffe4e6 100%);
-            padding: 20px;
-            border-radius: 16px;
+            background: #f8fafc;
+            padding: 16px;
+            border-radius: 8px;
             text-align: center;
-            border: 2px solid rgba(255, 117, 140, 0.15);
-            transition: all 0.3s ease;
-        }
-
-        .stat-card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 8px 20px rgba(255, 117, 140, 0.2);
         }
 
         .stat-number {
             font-size: 32px;
             font-weight: 700;
-            background: linear-gradient(135deg, #ff6b9d 0%, #ff8e53 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: #667eea;
         }
 
         .stat-label {
             font-size: 12px;
-            color: #8b5e5e;
+            color: #666;
             margin-top: 4px;
-            font-weight: 500;
         }
 
         .home-icon {
             position: absolute;
             top: 20px;
             left: 20px;
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 250, 245, 0.95) 100%);
-            width: 44px;
-            height: 44px;
+            background: white;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            box-shadow: 0 4px 15px rgba(255, 117, 140, 0.3);
-            border: 2px solid rgba(255, 255, 255, 0.8);
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-            z-index: 10;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
 
         .home-icon:hover {
-            transform: scale(1.15) rotate(5deg);
-            box-shadow: 0 6px 20px rgba(255, 117, 140, 0.4);
+            transform: scale(1.1);
         }
 
         .modal {
@@ -493,8 +372,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(255, 182, 193, 0.4);
-            backdrop-filter: blur(8px);
+            background: rgba(0, 0, 0, 0.5);
             z-index: 1000;
             padding: 20px;
             overflow-y: auto;
@@ -507,32 +385,21 @@
         }
 
         .modal-content {
-            background: linear-gradient(145deg, rgba(255, 255, 255, 0.98) 0%, rgba(255, 250, 245, 0.98) 100%);
-            border-radius: 24px;
-            padding: 28px;
+            background: white;
+            border-radius: 16px;
+            padding: 24px;
             max-width: 500px;
             width: 100%;
             max-height: 90vh;
             overflow-y: auto;
-            box-shadow: 0 15px 50px rgba(255, 105, 135, 0.25);
-            border: 2px solid rgba(255, 255, 255, 0.9);
         }
 
         .time-input {
-            padding: 14px;
-            border: 2px solid rgba(255, 117, 140, 0.2);
-            border-radius: 12px;
+            padding: 12px;
+            border: 2px solid #e2e8f0;
+            border-radius: 8px;
             font-size: 16px;
             width: 100%;
-            background: linear-gradient(135deg, #fff5f5 0%, #ffe4e6 100%);
-            transition: all 0.3s ease;
-        }
-
-        .time-input:focus {
-            outline: none;
-            border-color: #ff758c;
-            background: white;
-            box-shadow: 0 4px 15px rgba(255, 117, 140, 0.2);
         }
 
         .switch-container {
@@ -562,10 +429,9 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(135deg, #e8c1c1 0%, #d4a5a5 100%);
-            transition: .4s cubic-bezier(0.4, 0, 0.2, 1);
+            background-color: #cbd5e1;
+            transition: .4s;
             border-radius: 28px;
-            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .slider:before {
@@ -575,15 +441,13 @@
             width: 20px;
             left: 4px;
             bottom: 4px;
-            background: white;
-            transition: .4s cubic-bezier(0.4, 0, 0.2, 1);
+            background-color: white;
+            transition: .4s;
             border-radius: 50%;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
         }
 
         input:checked + .slider {
-            background: linear-gradient(135deg, #ff758c 0%, #ff7eb3 100%);
-            box-shadow: 0 0 10px rgba(255, 117, 140, 0.4);
+            background-color: #667eea;
         }
 
         input:checked + .slider:before {
@@ -1045,7 +909,7 @@
                         </div>
                     ` : state.sessionData.lookingForward && state.sessionData.lookingForward !== 'Other' ? `
                         <p style="margin-top: 12px; padding: 12px; background: #e0e7ff; border-radius: 8px; color: #4338ca; font-size: 14px;">
-                            Nice! That's something good to Hhld onto today.
+                            Nice! That's something good to hold onto today.
                         </p>
                     ` : ''}
                 </div>
