Update text for inclusivity and clarity

--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,7 @@
                         </button>
                         <button onclick="selectActivationType('💔 Relationship Conflict')">
                             <span class="button-icon">💔</span>
-                            <span>Fight/disagreement with Franni</span>
+                            <span>Fight/disagreement with spouse</span>
                         </button>
                         <button onclick="selectActivationType('💔 Rejection')">
                             <span class="button-icon">💔</span>
@@ -1790,16 +1790,16 @@
                     <p style="text-align: center; margin: 16px 0; color: #666;">— or work through it here —</p>
 
                     <div style="padding: 16px; background: #fef3c7; border-left: 4px solid #f59e0b; border-radius: 8px; margin-bottom: 12px;">
-                        <strong>Her upset ≠ Your inadequacy</strong>
+                        <strong>Their upset ≠ Your inadequacy</strong>
                         <p style="font-size: 14px; margin-top: 8px; color: #92400e;">
-                            "She's upset with me right now. That doesn't mean I'm a terrible husband or inadequate. It means we're having a hard moment."
+                            "They are upset with me right now. That doesn't mean I'm a terrible spouse or inadequate. It means we're having a hard moment."
                         </p>
                     </div>
 
                     <div style="padding: 16px; background: #dbeafe; border-left: 4px solid #3b82f6; border-radius: 8px; margin-bottom: 12px;">
                         <strong>Separate the mistake from catastrophe</strong>
                         <p style="font-size: 14px; margin-top: 8px; color: #1e40af;">
-                            "I did/said something that hurt her. That's true. AND I can repair this. One mistake doesn't mean I'm failing as a partner."
+                            "I did/said something that hurt them. That's true. AND I can repair this. One mistake doesn't mean I'm failing as a partner."
                         </p>
                     </div>
 
@@ -1814,11 +1814,11 @@
                         <strong>What am I trying to do right now?</strong>
                         <div class="checkbox-group" style="margin-top: 12px;">
                             ${[
-                                'Make her stop being upset (control)',
-                                'Actually understand her perspective',
+                                'Make them stop being upset (control)',
+                                'Actually understand their perspective',
                                 'Defend myself from feeling inadequate',
                                 'Rush to fix without processing',
-                                'Self-flagellate to prove I care',
+                                'Self-collapse to prove I care (over-apologize, catastraphize my responsibility',
                                 'Be present for repair'
                             ].map(behavior => `
                                 <label class="checkbox-item">
@@ -1832,7 +1832,7 @@
                     </div>
 
                     <div class="info-box" style="margin-top: 16px;">
-                        <strong>Remember:</strong> You can tolerate her being upset without it meaning you're inadequate. Repair is possible.
+                        <strong>Remember:</strong> You can tolerate them being upset without it meaning you're inadequate. Repair is possible.
                     </div>
                 </div>
                 <div class="navigation-buttons">
